<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_driver_ros2</name>
  <version>1.2.0</version>
  <description>Meta-package aggregating the ethercat_driver_ros2 packages and documentation</description>
  <maintainer email="mcbed.robotics@gamil.com">Maciej Bednarczyk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ethercat_driver</exec_depend>
  <exec_depend>ethercat_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
