<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_generic_cia402_drive</name>
  <version>1.2.0</version>
  <description>Plugin implementations of generic EtherCAT modules for CiA402 drives.</description>
  <maintainer email="mcbed.robotics@gamil.com">Maciej Bednarczyk</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>ethercat_interface</depend>
  <depend>ethercat_generic_slave</depend>
  <depend>pluginlib</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
